--- a/necessary_sufficient.ipynb
+++ b/necessary_sufficient.ipynb
@@ -10,29 +10,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "205f4183",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "import os\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import torch\n",
-    "import torchvision.transforms as T\n",
-    "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms\n",
     "from torchvision.models import densenet121\n",
     "import pydicom\n",
-    "import numpy as np\n",
     "from PIL import Image\n",
-    "from torchvision import transforms\n",
-    "import pandas as pd\n",
-    "import os\n"
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
+   "id": "7df9f8ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fix all sources of randomness\n",
+    "SEED = 42\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed_all(SEED)\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark= False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "3cc55ac7",
    "metadata": {},
    "outputs": [],
@@ -42,12 +59,13 @@
     "    img = ds.pixel_array.astype(np.float32)\n",
     "    img = (img - img.min()) / (img.max() - img.min() + 1e-8)\n",
     "    img = (img * 255).round().astype(np.uint8)\n",
-    "    return Image.fromarray(img)"
+    "    return Image.fromarray(img)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "465b20b7",
    "metadata": {},
    "outputs": [],
@@ -78,177 +96,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "3bb4e4c4",
+   "execution_count": 2,
+   "id": "e9e889b2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Users/Kyra_1/Downloads/.venv/lib/python3.12/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
-      "/Users/Kyra_1/Downloads/.venv/lib/python3.12/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
-      "  warnings.warn(msg)\n"
+      "/Users/Kyra_1/Downloads/.venv/lib/python3.12/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=DenseNet121_Weights.IMAGENET1K_V1`. You can also use `weights=DenseNet121_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "/Users/Kyra_1/Downloads/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
      ]
-    }
-   ],
-   "source": [
-    "# 2) Settings\n",
-    "device          = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "checkpoint_path = \"best_densenet_ethnicity.pth\"\n",
-    "num_classes     = 4     # ← change to match your len(unique_labels)\n",
-    "IMG_SIZE        = 224   # ← whatever size you trained with\n",
-    "\n",
-    "# 3) Re-instantiate your model exactly as in training\n",
-    "model = densenet121(pretrained=False)\n",
-    "# – swap in a 1-channel conv0\n",
-    "model.features.conv0 = nn.Conv2d(\n",
-    "    in_channels=1,\n",
-    "    out_channels=64,\n",
-    "    kernel_size=7,\n",
-    "    stride=2,\n",
-    "    padding=3,\n",
-    "    bias=False\n",
-    ")\n",
-    "# – swap in your 4-way classifier\n",
-    "model.classifier = nn.Linear(\n",
-    "    in_features=model.classifier.in_features,\n",
-    "    out_features=num_classes\n",
-    ")\n",
-    "model = model.to(device)\n",
-    "\n",
-    "# 4) Load the weights\n",
-    "state_dict = torch.load(checkpoint_path, map_location=device)\n",
-    "model.load_state_dict(state_dict)\n",
-    "\n",
-    "# 5) Switch to eval mode\n",
-    "model.eval()\n",
-    "\n",
-    "\n",
-    "# 7) Inference on a single image\n",
-    "def predict_dicom(dicom_path):\n",
-    "    # read & preprocess\n",
-    "    pil_img = load_dicom_as_pil(dicom_path)\n",
-    "    x       = transform(pil_img).unsqueeze(0).to(device) \n",
-    "    # forward\n",
-    "    with torch.no_grad():\n",
-    "        logits = model(x)\n",
-    "        probs  = torch.softmax(logits, dim=1)\n",
-    "    pred_idx = probs.argmax(dim=1).item()\n",
-    "    return pred_idx, probs.cpu().numpy()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "a3149a6f",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ASIAN': 0, 'BLACK/AFRICAN AMERICAN': 1, 'HISPANIC/LATINO': 2, 'WHITE': 3}\n",
-      "   patient_id                                         dicom_path  class_idx  \\\n",
-      "0    15000485  /Users/Kyra_1/Desktop/local_ADS_data/physionet...          3   \n",
-      "1    15000485  /Users/Kyra_1/Desktop/local_ADS_data/physionet...          3   \n",
-      "2    15000485  /Users/Kyra_1/Desktop/local_ADS_data/physionet...          3   \n",
-      "3    15002678  /Users/Kyra_1/Desktop/local_ADS_data/physionet...          3   \n",
-      "4    15002678  /Users/Kyra_1/Desktop/local_ADS_data/physionet...          3   \n",
-      "\n",
-      "     prob_0    prob_1    prob_2    prob_3  \n",
-      "0  0.005292  0.015935  0.001419  0.977354  \n",
-      "1  0.019677  0.301652  0.007453  0.671218  \n",
-      "2  0.028240  0.144241  0.011913  0.815606  \n",
-      "3  0.042485  0.099779  0.017487  0.840249  \n",
-      "4  0.057175  0.052740  0.151839  0.738246  \n",
-      "(19, 7)\n",
-      "1\n",
-      "['/Users/Kyra_1/Desktop/local_ADS_data/physionet.org/files/mimic-cxr/2.1.0//files/p15/p15002678/s51171473/a57016f6-7e508b1c-2ae93482-05af10fa-6222510b.dcm']\n"
+      "Saved 19 predictions to predictions.csv\n"
      ]
     }
    ],
    "source": [
-    "# processing to go through all the available data (assuming all the available data is recorded in best_model_pred.csv)\n",
+    "# ─── 1) FIX ALL SOURCES OF RANDOMNESS ────────────────────────────────\n",
+    "SEED = 42\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed_all(SEED)\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark = False\n",
     "\n",
+    "# ─── 2) DEVICE ───────────────────────────────────────────────────────\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "elif torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "print(\"Using device:\", device)\n",
+    "\n",
+    "# ─── 3) HARD-CODE TRAINING MEAN & STD ────────────────────────────────\n",
+    "TRAIN_MEAN = 0.5037\n",
+    "TRAIN_STD  = 0.2510\n",
+    "\n",
+    "# ─── 4) TRANSFORM FOR TEST IMAGES ────────────────────────────────────\n",
+    "test_transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([TRAIN_MEAN], [TRAIN_STD])\n",
+    "])\n",
+    "\n",
+    "# ─── 5) DATASET & DATALOADER ────────────────────────────────────────\n",
+    "class DicomDataset(Dataset):\n",
+    "    def __init__(self, items, labels_dict, label2idx, transform):\n",
+    "        self.items     = items\n",
+    "        self.labels    = labels_dict\n",
+    "        self.label2idx = label2idx\n",
+    "        self.transform = transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.items)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        pid, path = self.items[idx]\n",
+    "        ds         = pydicom.dcmread(path)\n",
+    "        arr        = ds.pixel_array.astype(np.float32)\n",
+    "\n",
+    "        # normalize to [0,1] using numpy.ptp\n",
+    "        arr_min = arr.min()\n",
+    "        arr_ptp = np.ptp(arr)\n",
+    "        arr_norm = (arr - arr_min) / (arr_ptp + 1e-6)\n",
+    "\n",
+    "        # convert back to 8-bit and apply transforms\n",
+    "        img = Image.fromarray((arr_norm * 255).astype(np.uint8))\n",
+    "        img = self.transform(img)\n",
+    "\n",
+    "        lbl = self.labels[(pid, path)]\n",
+    "        return img, self.label2idx[lbl]\n",
+    "\n",
+    "# ─── 6) LOAD TEST ITEMS & LABELS ────────────────────────────────────\n",
     "local_path_stem = \"/Users/Kyra_1/Desktop/local_ADS_data/physionet.org/files/mimic-cxr/2.1.0/\"\n",
+    "df_preds        = pd.read_csv(\"five_epoch_pred.csv\")\n",
     "\n",
-    "successful_files = pd.read_csv(\"best_model_pred.csv\")\n",
-    "\n",
-    "all_labels = successful_files['true_label']\n",
-    "# recreate the label mapping from the training\n",
+    "# build label mapping\n",
+    "all_labels   = df_preds['true_label']\n",
     "unique_labels = sorted(all_labels.unique())\n",
     "label2idx     = {lab: i for i, lab in enumerate(unique_labels)}\n",
-    "print(label2idx)\n",
     "\n",
-    "og_image_predictions = []\n",
-    "label_ambiguity_count = 0\n",
-    "label_ambiguity_ids = []\n",
-    "\n",
-    "for _, row in successful_files.iterrows():\n",
-    "    patient_id = row['subject_id']\n",
+    "# collect (pid, full_path) and labels_dict\n",
+    "test_items  = []\n",
+    "labels_dict = {}\n",
+    "for _, row in df_preds.iterrows():\n",
+    "    pid        = row['subject_id']\n",
     "    other_path = row['dicom_path'].split('2.1.0')[1]\n",
-    "    full_path  = local_path_stem+ other_path\n",
-    "    train_label = row['predicted']\n",
+    "    full_path  = os.path.join(local_path_stem, other_path.lstrip('/'))\n",
     "    if not os.path.exists(full_path):\n",
     "        continue\n",
+    "    test_items.append((pid, full_path))\n",
+    "    labels_dict[(pid, full_path)] = row['true_label']\n",
     "\n",
-    "    try:\n",
-    "        idx, probs = predict_dicom(full_path)\n",
-    "        if label2idx[train_label] != idx:\n",
-    "            label_ambiguity_count += 1\n",
-    "            label_ambiguity_ids.append(full_path)\n",
+    "# create DataLoader\n",
+    "test_loader = DataLoader(\n",
+    "    DicomDataset(test_items, labels_dict, label2idx, test_transform),\n",
+    "    batch_size=8,\n",
+    "    shuffle=False,\n",
+    "    num_workers=0,\n",
+    "    pin_memory=True\n",
+    ")\n",
     "\n",
-    "    except:\n",
-    "        print(f'Skipped: {patient_id}')\n",
-    "        continue\n",
+    "# ─── 7) BUILD MODEL & LOAD WEIGHTS ─────────────────────────────────\n",
+    "num_classes = len(unique_labels)\n",
     "\n",
-    "    p0, p1, p2, p3 = probs.flatten().tolist()\n",
+    "model = densenet121(pretrained=True)\n",
+    "# swap first conv to accept 1 channel\n",
+    "old = model.features.conv0\n",
+    "new = nn.Conv2d(\n",
+    "    1, old.out_channels,\n",
+    "    old.kernel_size, old.stride, old.padding,\n",
+    "    bias=(old.bias is not None)\n",
+    ")\n",
+    "with torch.no_grad():\n",
+    "    new.weight[:] = old.weight.mean(dim=1, keepdim=True)\n",
+    "    if old.bias is not None:\n",
+    "        new.bias[:] = old.bias\n",
+    "model.features.conv0 = new\n",
     "\n",
-    "    og_image_predictions.append({\n",
-    "        'patient_id': patient_id,\n",
-    "        'dicom_path': full_path,\n",
-    "        'class_idx':  idx,    \n",
-    "        'prob_0':      p0,\n",
-    "        'prob_1':      p1,\n",
-    "        'prob_2':      p2,\n",
-    "        'prob_3':      p3,\n",
-    "    })\n",
+    "# replace classifier\n",
+    "model.classifier = nn.Linear(model.classifier.in_features, num_classes)\n",
+    "model = model.to(device)\n",
     "\n",
-    "pred_df = pd.DataFrame(og_image_predictions)\n",
-    "print(pred_df.head())\n",
-    "pred_df.to_csv(\"ethnicity_preds.csv\", index=False)\n",
-    "print(pred_df.shape)\n",
-    "print(label_ambiguity_count)\n",
-    "print(label_ambiguity_ids)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ce3a0d7",
-   "metadata": {},
-   "source": [
-    "0.09404128\t0.1083391085267067\t0.4549783170223236\t0.34264135360717773\n",
-    "0.011608587577939034, 0.057486627250909805, 0.23680849373340607, 0.6940963268280029"
+    "# load your trained weights\n",
+    "model.load_state_dict(torch.load(\"reproduceable_densenet.pt\", map_location=device))\n",
+    "model.eval()\n",
+    "\n",
+    "# ─── 8) RUN INFERENCE & SAVE TO CSV ────────────────────────────────\n",
+    "results = []\n",
+    "batch_size = test_loader.batch_size\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for batch_idx, (imgs, labs) in enumerate(test_loader):\n",
+    "        imgs  = imgs.to(device)\n",
+    "        logits = model(imgs)\n",
+    "        probs  = torch.softmax(logits, dim=1)\n",
+    "        preds  = probs.argmax(dim=1)\n",
+    "\n",
+    "        for b in range(imgs.size(0)):\n",
+    "            global_idx = batch_idx * batch_size + b\n",
+    "            pid, path  = test_items[global_idx]\n",
+    "            true_lbl   = unique_labels[labs[b].item()]\n",
+    "            pred_lbl   = unique_labels[preds[b].item()]\n",
+    "            prob_vals  = probs[b].cpu().numpy().tolist()\n",
+    "\n",
+    "            row = {\n",
+    "                \"patient_id\":      pid,\n",
+    "                \"full_path\":       path,\n",
+    "                \"true_label\":      true_lbl,\n",
+    "                \"predicted_label\": pred_lbl,\n",
+    "            }\n",
+    "            for j, p in enumerate(prob_vals):\n",
+    "                row[f\"prob_class_{j}\"] = p\n",
+    "\n",
+    "            results.append(row)\n",
+    "\n",
+    "# write out\n",
+    "out_df = pd.DataFrame(results)\n",
+    "out_df.to_csv(\"predictions.csv\", index=False)\n",
+    "print(f\"Saved {len(out_df)} predictions to predictions.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "2e763e28",
+   "execution_count": 3,
+   "id": "9a2fc5b8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      " L1   = 0.000001, L2 = 0.000000, max_abs = 0.000000, MAE = 0.000000\n",
+      " L1   = 0.000030, L2 = 0.000020, max_abs = 0.000015, MAE = 0.000007\n",
+      " L1   = 0.000085, L2 = 0.000056, max_abs = 0.000043, MAE = 0.000021\n",
+      " L1   = 0.000030, L2 = 0.000021, max_abs = 0.000015, MAE = 0.000008\n",
+      " L1   = 0.000031, L2 = 0.000021, max_abs = 0.000016, MAE = 0.000008\n",
+      " L1   = 0.000002, L2 = 0.000002, max_abs = 0.000001, MAE = 0.000001\n",
+      " L1   = 0.000002, L2 = 0.000001, max_abs = 0.000001, MAE = 0.000001\n",
+      " L1   = 0.000029, L2 = 0.000019, max_abs = 0.000014, MAE = 0.000007\n",
+      " L1   = 0.000001, L2 = 0.000001, max_abs = 0.000000, MAE = 0.000000\n",
+      " L1   = 0.000043, L2 = 0.000026, max_abs = 0.000022, MAE = 0.000011\n",
+      " L1   = 0.000001, L2 = 0.000000, max_abs = 0.000000, MAE = 0.000000\n",
+      " L1   = 0.000002, L2 = 0.000001, max_abs = 0.000001, MAE = 0.000000\n",
+      " L1   = 0.000000, L2 = 0.000000, max_abs = 0.000000, MAE = 0.000000\n",
+      " L1   = 0.000000, L2 = 0.000000, max_abs = 0.000000, MAE = 0.000000\n",
+      " L1   = 0.000021, L2 = 0.000015, max_abs = 0.000010, MAE = 0.000005\n",
+      " L1   = 0.000000, L2 = 0.000000, max_abs = 0.000000, MAE = 0.000000\n",
+      " L1   = 0.000001, L2 = 0.000001, max_abs = 0.000001, MAE = 0.000000\n",
+      " L1   = 0.000001, L2 = 0.000000, max_abs = 0.000000, MAE = 0.000000\n",
+      " L1   = 0.000000, L2 = 0.000000, max_abs = 0.000000, MAE = 0.000000\n"
      ]
     }
    ],
    "source": [
-    "print(model.training)"
+    "import ast\n",
+    "\n",
+    "from_test = pd.read_csv('reproduceable_model_pred.csv')\n",
+    "jiwoo_stem = '/Users/jiwoo_noh/Downloads'\n",
+    "\n",
+    "from_loading = pd.read_csv('predictions.csv')\n",
+    "\n",
+    "for _, row in from_loading.iterrows():\n",
+    "    dicom_id = row['full_path'].split('local_ADS_data')[1]\n",
+    "    search_path = jiwoo_stem+ dicom_id\n",
+    "    prob_list = [row['prob_class_0'],row['prob_class_1'],row['prob_class_2'],row['prob_class_3']]\n",
+    "\n",
+    "    mask = from_test['dicom_path'] == search_path\n",
+    "    if not mask.any():\n",
+    "        print(f\"{search_path!r} not found in from_test\")\n",
+    "        continue\n",
+    "\n",
+    "    # grab the packed‐string out of your test set\n",
+    "    raw = from_test.loc[mask, 'probabilities'].iloc[0]\n",
+    "\n",
+    "    # if it’s a string, turn it into a Python list\n",
+    "    if isinstance(raw, str):\n",
+    "        raw = ast.literal_eval(raw)\n",
+    "\n",
+    "    # make numpy arrays\n",
+    "    a = np.array(raw, dtype=float)\n",
+    "    b = np.array(prob_list, dtype=float)\n",
+    "\n",
+    "    # element-wise difference: test − pipeline\n",
+    "    diffs = a - b\n",
+    "\n",
+    "    # some simple metrics\n",
+    "    l1      = np.sum(np.abs(diffs))         # L₁ norm (sum of abs diffs)\n",
+    "    l2      = np.linalg.norm(diffs)         # L₂ norm (Euclidean)\n",
+    "    max_abs = np.max(np.abs(diffs))         # maximum absolute difference\n",
+    "    mae     = np.mean(np.abs(diffs))        # mean absolute error\n",
+    "\n",
+    "    #print(\" diffs         :\", diffs.tolist())\n",
+    "    print(f\" L1   = {l1:.6f}, L2 = {l2:.6f}, max_abs = {max_abs:.6f}, MAE = {mae:.6f}\")\n",
+    "\n",
+    "    "
    ]
   },
   {
