use reproduceable_densenet.pt and pred.csv, mean_image.pt is valid

--- a/necessary_sufficient.ipynb
+++ b/necessary_sufficient.ipynb
@@ -24,7 +24,7 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import transforms\n",
-    "from torchvision.models import densenet121\n",
+    "from torchvision.models import densenet121e\n",
     "import pydicom\n",
     "from PIL import Image\n",
     "import ast"
@@ -340,7 +340,7 @@
     "    diffs = a - b\n",
     "\n",
     "    # some simple metrics\n",
-    "    l1      = np.sum(np.abs(diffs))         # L₁ norm (sum of abs diffs)\n",
+    "    l1      = np.sum(np.abs(diffs))         # L₁ norm (sum of abs diffs) - try the mean (torch.mean) so that the loss fluctuates between 0 and 1 and not the entire dimensions \n",
     "    l2      = np.linalg.norm(diffs)         # L₂ norm (Euclidean)\n",
     "    max_abs = np.max(np.abs(diffs))         # maximum absolute difference\n",
     "    mae     = np.mean(np.abs(diffs))        # mean absolute error\n",
@@ -407,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +421,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
